<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/hospitalTitleEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hospitalTitleEdit" />

        <EditText
            android:id="@+id/districtEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/districtEdit"
            android:paddingTop="20dp" />
        
        <EditText
            android:id="@+id/typeEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/typeEdit"
            android:paddingTop="20dp" />
        
        <EditText
            android:id="@+id/landlineEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/landlineEdit"
            android:paddingTop="20dp" />
        
        <EditText
            android:id="@+id/mobileEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobileEdit"
            android:paddingTop="20dp" />
        
        <EditText
            android:id="@+id/coordinateEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/coordinateEdit"
            android:paddingTop="20dp" />
        
        
        
        
    </LinearLayout>

</ScrollView>